# telecom-p1-rust

./: .gitignore  Cargo.toml  README.md  grade.py  run-grader
.github/workflows/: main.yml
src/: lib.rs  main.rs  serial_linux.rs  serial_windows.rs  uart.rs  v21.rs
tests/: test.rs
