[package]
name = "modem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
cpal = "0.15.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["commapi", "fileapi", "errhandlingapi", "synchapi", "ioapiset", "handleapi", "winerror"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["term"] }
